Closed Bug 833016 Opened 11 years ago Closed 11 years ago

Shutdown crash releasing sCoreApp and sMetroApp

Categories

(Core Graveyard :: Widget: WinRT, defect)

x86_64
Windows 8.1
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla22

People

(Reporter: jimm, Assigned: jimm)

References

Details

(Whiteboard: [metro-mvp])

Attachments

(1 file, 1 obsolete file)

Still seeing this in release builds with a debugger attached. Unfortunately debugging what's going on i stouch since windows is terminating the process when it happens.

xul.dll!Microsoft::WRL::Details::RuntimeClass<Microsoft::WRL::Details::InterfaceList<ABI::Windows::Foundation::Collections::IVector<HSTRING__ *>,Microsoft::WRL::Details::InterfaceList<Microsoft::WRL::FtmBase,Microsoft::WRL::Details::Nil> >,Microsoft::WRL::RuntimeClassFlags<1>,1,1,0>::InternalRelease() Line 1729	C++
xul.dll!Microsoft::WRL::Details::RuntimeClass<Microsoft::WRL::Details::InterfaceList<ABI::Windows::ApplicationModel::Core::IFrameworkView,Microsoft::WRL::Details::InterfaceList<Microsoft::WRL::FtmBase,Microsoft::WRL::Details::Nil> >,Microsoft::WRL::RuntimeClassFlags<1>,1,1,0>::Release() Line 1666	C++
xul.dll!XRE_MetroCoreApplicationRun() Line 234	C++
xul.dll!XRE_mainMetro(int argc=1, char * * argv=0x029316c4, const nsXREAppData * aAppData=0x03016140) Line 4074	C++
xul.dll!XRE_main(int argc=1, char * * argv=0x029316c4, const nsXREAppData * aAppData=0x03016140, unsigned int aFlags=1) Line 4114	C++
firefox.exe!do_main(int argc=1, char * * argv=0x00000000, char * aWorkingPath=0x00ecf884) Line 326	C++
firefox.exe!NS_internal_main(int argc=2, char * * argv=0x029316c0) Line 445	C++
firefox.exe!wmain(int argc=0, wchar_t * * argv=0x02932bb0) Line 112	C++
firefox.exe!__tmainCRTStartup() Line 552	C
kernel32.dll!@BaseThreadInitThunk@12()	Unknown
ntdll.dll!___RtlUserThreadStart@8()	Unknown
ntdll.dll!__RtlUserThreadStart@8()	Unknown
I wonder if this is some sort of ref counting problem. Seems like these objects have already been destroyed by the time we get around to derefing them. I tried moving these up to CoreExit and ran into an Uninitialize crash. Not clearing them results in crashes later during app tear down.
Whiteboard: [metro-mvp]
transfer widget win32->winrt
Component: Widget: Win32 → Widget: WinRT
Blocks: 848997
Attached patch refcount fix (obsolete) — Splinter Review
Assignee: nobody → jmathies
Attached patch refcount fixSplinter Review
This cleans up the ref counting on framework view.
Attachment #729572 - Attachment is obsolete: true
Attachment #729574 - Flags: review?(netzen)
Attachment #729574 - Flags: review?(netzen) → review+
https://hg.mozilla.org/mozilla-central/rev/8e0583fa4dd8
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla22
OS: Windows 8 Metro → Windows 8.1
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: