Bug 833016 - Fix for FrameworkView addrefing which is causing crashes on shutdown. r=bbondy